マイページ機能を実装しました

--- a/resources/lang/ja.json
+++ b/resources/lang/ja.json
@@ -5,22 +5,27 @@
   "Password" : "パスワード",
   "Confirm Password" : "パスワードを再入力",
   "Login" : "ログイン",
+  "Logout" : "ログアウト",
   "Remember Me": "ログイン状態を保持",
   "Forgot Your Password?" : "パスワードを忘れた場合",
   "Drill Register" : "問題集登録",
   "Title": "タイトル",
-  "DrillTitle" : "問題集のタイトル",
-  "DrillCategory": "カテゴリー",
-  "ChoiseAnswerMethod" : "解答方法",
+  "Drill Title" : "問題集のタイトル",
+  "Drill Category": "カテゴリー",
+  "AnswerMethod" : "解答方法",
   "Problem": "問題",
   "RegisterProblem" : "問題集を登録",
   "Drill is Registered" : "問題集を新規登録しました",
-  "My Drill List" : "登録した問題集一覧",
+  "Registered Drills" : "投稿した問題集一覧",
   "Go Practice" : "レッスンスタート",
   "START" : "スタート",
+  "Practice" : "レッスン",
   "Edit" : "編集する",
   "Delete" : "削除する",
+  "See Answer" : "答えを確認",
+  "Drill Answers" : "ドリルの解答一覧",
   "Drill List" : "問題集一覧",
+  "Back to Drill List" : "問題集一覧へ戻る",
   "Invalid operation was performed" : "不正な操作が行われました",
   "Drill Updater" : "問題集を編集",
   "Update Drill" : "編集を完了",
